--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "config": "^1.29.4",
     "cors": "^2.8.4",
     "express": "^4.16.2",
@@ -24,6 +26,8 @@
     "lodash": "^4.17.10",
     "moment": "^2.20.1",
     "mongoose": "^5.0.2",
+    "multer": "^1.4.2",
+    "uuid": "^8.3.1",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
   },
